--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@
 }
 
 .link-secondary:hover{
-    color: rgb(22, 83, 22);;
+    color: rgb(22, 83, 22);
+    cursor: pointer;
+}
+
+body{
+    background-image: linear-gradient(to top,rgb(211, 143, 16), rgb(255, 255, 255));
 }
 
 .logo{
@@ -56,7 +61,8 @@ form{
 }
 
 .carousel-item img{
-    object-fit: fill;
+    height: 34rem;
+    object-fit: cover;
 }
 
 .carousel-caption{
@@ -65,14 +71,15 @@ form{
 
 a{
     text-decoration: none;
+    color:black;
 }
 
-.card{
+#row-news .col-6 .card{
     border-radius: 0px;
     border-color: rgb(211, 120, 16);
 }
 
-.card img{
+#row-news .col-6 .card img{
     border-radius: 0px;
     width: 17.5rem;
     height: 15rem;
@@ -81,6 +88,35 @@ a{
 #row-news .col-6{
     padding: 0;
 }
+
+#row-recepies .col-12{
+    width: 30rem;
+    margin-left: 2.7rem;
+}
+
+#row-recepies .col-12:hover{
+   cursor: pointer;
+}
+
+#row-recepies .col-12 .card{
+    border-color: rgb(5, 148, 5);
+    border-radius: 0px;
+}
+
+#row-recepies .col-12 .card img{
+    border-radius: 0px;
+}
+
+@media (min-width: 768px){
+    #row-recepies .col-12{
+        width: 20rem;
+    }
+
+    #row-recepies .col-12 .card img{
+        height: 10rem;
+    }
+}
+
 
 #footer{
     background-color: rgb(5, 148, 5);
